discussion/kv_engine/179286/179286_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Move the server interface classes into a new directory

Change-Id: Id839ab6df2c61328a3a9d6915806f80f83695491

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-08-31 08:17:16.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 08:27:33.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19825/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10: error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
#include "memcached/bucket_memory_manager.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19825/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19825/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48759/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/warmup.cc(27): fatal error C1083: Cannot open include file: "memcached/bucket_memory_manager.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48759/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40986/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40986/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9520/ : FAILURE

Compile error at [2022-08-31T08:21:25.535Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9520/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21068/ : FAILURE

Compile error at [2022-08-31T08:21:15.820Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21068/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21777/ : FAILURE

Compile error at [2022-08-31T08:26:12.542Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21777/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22866/ : FAILURE

Compile error at [2022-08-31T08:24:42.829Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22866/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22129/ : FAILURE

Compile error at [2022-08-31T08:23:18.694Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22129/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30158/ : FAILURE

Compile error at [2022-08-31T08:26:27.171Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30158/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9619/ : FAILURE

Compile error at [2022-08-31T08:22:32.983Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9619/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19046/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
